Add batch normalization to CNN

--- a/assignment2/ConvolutionalNetworks.ipynb
+++ b/assignment2/ConvolutionalNetworks.ipynb
@@ -1206,17 +1206,93 @@
    "metadata": {},
    "source": [
     "# Extra Credit Description\n",
-    "If you implement any additional features for extra credit, clearly describe them here with pointers to any code in this or other files if applicable.\n"
+    "If you implement any additional features for extra credit, clearly describe them here with pointers to any code in this or other files if applicable.\n",
+    "\n",
+    "## Answer\n",
+    "\n",
+    "Added support for spatial batch normalization in ThreeLayerConvNet. I experimented using Batch before ReLU. For 1 epoch I obtained 40.4% accuracy on the training set and 40.6% on the validation set.\n",
+    "\n",
+    "When using Batch after ReLU I got better results as shown bellow."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 980) loss: 2.308235\n",
+      "(Epoch 0 / 1) train acc: 0.148000; val_acc: 0.147000\n",
+      "(Iteration 21 / 980) loss: 2.080688\n",
+      "(Iteration 41 / 980) loss: 1.902614\n",
+      "(Iteration 61 / 980) loss: 1.882289\n",
+      "(Iteration 81 / 980) loss: 1.626149\n",
+      "(Iteration 101 / 980) loss: 1.602289\n",
+      "(Iteration 121 / 980) loss: 1.701581\n",
+      "(Iteration 141 / 980) loss: 1.679481\n",
+      "(Iteration 161 / 980) loss: 1.785077\n",
+      "(Iteration 181 / 980) loss: 1.597444\n",
+      "(Iteration 201 / 980) loss: 1.369787\n",
+      "(Iteration 221 / 980) loss: 1.234249\n",
+      "(Iteration 241 / 980) loss: 1.602530\n",
+      "(Iteration 261 / 980) loss: 1.552782\n",
+      "(Iteration 281 / 980) loss: 1.400096\n",
+      "(Iteration 301 / 980) loss: 1.454526\n",
+      "(Iteration 321 / 980) loss: 1.363326\n",
+      "(Iteration 341 / 980) loss: 1.532312\n",
+      "(Iteration 361 / 980) loss: 1.386633\n",
+      "(Iteration 381 / 980) loss: 1.279857\n",
+      "(Iteration 401 / 980) loss: 1.267408\n",
+      "(Iteration 421 / 980) loss: 1.232656\n",
+      "(Iteration 441 / 980) loss: 1.248331\n",
+      "(Iteration 461 / 980) loss: 1.634950\n",
+      "(Iteration 481 / 980) loss: 1.295450\n",
+      "(Iteration 501 / 980) loss: 1.088943\n",
+      "(Iteration 521 / 980) loss: 1.324445\n",
+      "(Iteration 541 / 980) loss: 1.363934\n",
+      "(Iteration 561 / 980) loss: 1.273670\n",
+      "(Iteration 581 / 980) loss: 1.406282\n",
+      "(Iteration 601 / 980) loss: 1.303756\n",
+      "(Iteration 621 / 980) loss: 1.232144\n",
+      "(Iteration 641 / 980) loss: 1.112437\n",
+      "(Iteration 661 / 980) loss: 1.468713\n",
+      "(Iteration 681 / 980) loss: 1.112189\n",
+      "(Iteration 701 / 980) loss: 1.399416\n",
+      "(Iteration 721 / 980) loss: 1.183216\n",
+      "(Iteration 741 / 980) loss: 1.173721\n",
+      "(Iteration 761 / 980) loss: 1.418323\n",
+      "(Iteration 781 / 980) loss: 1.319237\n",
+      "(Iteration 801 / 980) loss: 1.127506\n",
+      "(Iteration 821 / 980) loss: 0.993111\n",
+      "(Iteration 841 / 980) loss: 1.069287\n",
+      "(Iteration 861 / 980) loss: 1.018750\n",
+      "(Iteration 881 / 980) loss: 1.293245\n",
+      "(Iteration 901 / 980) loss: 1.249742\n",
+      "(Iteration 921 / 980) loss: 1.231326\n",
+      "(Iteration 941 / 980) loss: 1.105389\n",
+      "(Iteration 961 / 980) loss: 1.207737\n",
+      "(Epoch 1 / 1) train acc: 0.473000; val_acc: 0.444000\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = ThreeLayerConvNet(weight_scale=0.001, hidden_dim=500, reg=0.001, use_batchnorm=True)\n",
+    "\n",
+    "solver = Solver(model, data,\n",
+    "                num_epochs=1, batch_size=50,\n",
+    "                update_rule='adam',\n",
+    "                optim_config={\n",
+    "                  'learning_rate': 1e-4,\n",
+    "                },\n",
+    "                verbose=True, print_every=20,\n",
+    "                )\n",
+    "solver.train()"
+   ]
   },
   {
    "cell_type": "code",
